syntax = "proto3";
package ipc_interface;

service Exchange {
    rpc Echo (EchoRequest) returns (EchoReply);
}

message EchoRequest {
    string payload = 1;
}

message EchoReply {
    string message = 1;
}
